--- a/requirements.txt
+++ b/requirements.txt
@@ -2,9 +2,15 @@
 -e .
 
 # external requirements
-click
+click~=7.1.2
 Sphinx
 coverage
 awscli
 flake8
 python-dotenv>=0.5.1
+
+tensorflow~=2.2.0
+streamlit~=0.62.0
+pandas~=0.25.3
+numpy~=1.18.1
+setuptools~=47.1.1
